Ajusta estrutura e conteúdo

--- a/index.html
+++ b/index.html
@@ -442,24 +442,26 @@
 
             <div class="flex flex-col lg:flex-row justify-center items-center pt-16 lg:pb-10 gap-8 lg:gap-20">
                 <div class="w-full flex md:gap-5">
-                    <div>
-                        <img src="./assets/imagens/cardapio-notebook.png"
-                            alt="Imagem do site da hamburgueria (computador)"
+                    <div class="">
+                        <img src="./assets/imagens/tela-desafios-cardion.png"
+                            alt="Imagem da tela desafios do aplicativo"
                             class="hover:scale-110 transition-all duration-300">
                     </div>
                     <div class="hidden sm:block">
-                        <img src="./assets/imagens/cardapio-celular.png" alt="Imagem do site da hamburgueria (celular)"
+                        <img src="./assets/imagens/tela-conquista-cardion.png"
+                            alt="Imagem da tela conquistas do aplicativo"
                             class="hover:scale-110 transition-all duration-300">
                     </div>
                 </div>
                 <div class="w-full text-center">
-                    <h5 class="text-neutral-700 dark:text-neutral-300 text-xl tracking-wider font-bold mb-8">Cardápio Zé
-                        Burger
+                    <h5 class="text-neutral-700 dark:text-neutral-300 text-xl tracking-wider font-bold mb-8">Cardion
+                        Fitness App
                     </h5>
-                    <p class="text-neutral-700 dark:text-neutral-300 text-base mb-8 font-extralight">Aplicação de um
-                        cardapio digital para uma hamburgueria, com possibilidade de adcionar itens ao carrinho, remover
-                        e
-                        enviar pedido direto ao WhatsApp. Clique e confira !</p>
+                    <p class="text-neutral-700 dark:text-neutral-300 text-base mb-8 font-extralight">Aplicação
+                        desenvolvida como conclusão do curso de Análise e Desenvolvimento de Sistemas. Um aplicativo
+                        desenvolvido em
+                        React Native para o setor fitness. Clique e confira!
+                    </p>
                     <button
                         class="open-modal w-48 h-14 bg-button-bg cursor-pointer rounded-md border-2 dark:border-none dark:shadow-[inset_0px_-2px_0px_1px_#441bbf,inset_0px_0.5px_0px_1px_#441bbf] hover:border-[#441bbf] hover:bg-transparent shadow-[inset_0px_-2px_0px_1px_#441bbf] hover:text-neutral-700 group transition duration-300 ease-in-out"
                         data-project="1">
