--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 sobretudo em termos de programação e tecnologia</p>
         </div>
         <div
-            class="flex flex-col-reverse xl:flex-row justify-between items-center mx-auto max-w-7xl pt-10 xl:pt-20 gap-10 lg:gap-20">
+            class="flex flex-col-reverse max-[899px]:flex-col-reverse min-[900px]:flex-row justify-between items-center mx-auto max-w-7xl pt-10 xl:pt-20 gap-10 lg:gap-20">
             <div class="max-w-full">
                 <h3 class="mb-8 text-text-custom text-xl font-bold tracking-wider">Conheça-me!</h3>
                 <p class="text-neutral-700 dark:text-neutral-400 text-base leading-relaxed">Sou um <strong
@@ -219,8 +219,8 @@
                     </button>
                 </a>
             </div>
-            <div class="image-about w-full">
-                <img src="./assets/imagens/img-sobre-2.jpg" alt="Imagem da seção sobre"
+            <div class="image-about w-4/5 md:w-4/6">
+                <img src="./assets/imagens/img-sobre.jpg" alt="Imagem da seção sobre"
                     class="block w-full h-auto relative px-3">
             </div>
         </div>
