chore: Ajusta alguns projetos

--- a/index.html
+++ b/index.html
@@ -48,23 +48,23 @@
                             class="navbar-nav justify-content-center flex-grow-1 pe-3 gap-2 uppercase flex items-center">
                             <li class="nav-item">
                                 <a class="nav-link mx-lg-2 dark:text-neutral-200 dark:lg:text-neutral-200"
-                                    href="#home">Home</a>
+                                    href="#home">Inicio</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-lg-2 dark:text-neutral-200 dark:lg:text-neutral-200"
-                                    href="#about">About</a>
+                                    href="#about">Sobre</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-lg-2 dark:text-neutral-200 dark:lg:text-neutral-200"
-                                    href="#services">Services</a>
+                                    href="#services">Serviços</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-lg-2 dark:text-neutral-200 dark:lg:text-neutral-200"
-                                    href="#projects">Projects</a>
+                                    href="#projects">Projetos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-lg-2 dark:text-neutral-200 dark:lg:text-neutral-200"
-                                    href="#contact">Contact</a>
+                                    href="#contact">Contato</a>
                             </li>
                         </ul>
                     </div>
@@ -152,20 +152,6 @@
                     </a>
                     <div class="tooltip">Email</div>
                 </li>
-
-                <li class="icon-content">
-                    <a href="https://www.instagram.com/devweb_code/" aria-label="Instagram" data-social="instagram"
-                        target="_blank">
-                        <div class="filled"></div>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-instagram" viewBox="0 0 16 16" xml:space="preserve">
-                            <path
-                                d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"
-                                fill="currentColor"></path>
-                        </svg>
-                    </a>
-                    <div class="tooltip">Instagram</div>
-                </li>
             </ul>
         </div>
     </main>
@@ -203,8 +189,8 @@
                 <h3 class="mb-8 text-text-custom text-xl font-bold tracking-wider">Conheça-me!</h3>
                 <p class="text-neutral-700 dark:text-neutral-400 text-base leading-relaxed">Sou um <strong
                         class="text-neutral-600 dark:text-neutral-300">Desenvolvedor Web Focado em Front-End</strong>,
-                    construindo e gerindo o Front-end de Websites e Aplicações Web que conduzem ao sucesso do produto
-                    global. Veja alguns dos meus trabalhos na secção Projectos.</p> <br>
+                    construindo e desenvolvendo Websites, Aplicações Web e Aplicativos Moveis que conduzem ao sucesso do produto
+                    global. Veja alguns dos meus trabalhos na seção de Projectos.</p> <br>
                 <p class="mb-8 text-neutral-700  dark:text-neutral-400 text-base leading-relaxed">Estou aberto a
                     oportunidades de <strong class="text-neutral-600 dark:text-neutral-300">trabalho</strong>
                     onde eu possa contribuir, aprender e crescer. Se tiverem uma boa oportunidade que corresponda às
@@ -460,7 +446,7 @@
                     <p class="text-neutral-700 dark:text-neutral-300 text-base mb-8 font-extralight">Aplicação
                         desenvolvida como conclusão do curso de Análise e Desenvolvimento de Sistemas. Um aplicativo
                         desenvolvido em
-                        React Native para o setor fitness. Clique e confira!
+                        React Native para o setor fitness. Clique e confira !
                     </p>
                     <button
                         class="open-modal w-48 h-14 bg-button-bg cursor-pointer rounded-md border-2 dark:border-none dark:shadow-[inset_0px_-2px_0px_1px_#441bbf,inset_0px_0.5px_0px_1px_#441bbf] hover:border-[#441bbf] hover:bg-transparent shadow-[inset_0px_-2px_0px_1px_#441bbf] hover:text-neutral-700 group transition duration-300 ease-in-out"
@@ -505,24 +491,24 @@
             <div class="flex flex-col lg:flex-row justify-center items-center pt-16 lg:pb-10 gap-8 lg:gap-20">
                 <div class="w-full flex md:gap-5">
                     <div>
-                        <img src="./assets/imagens/construtora-notebook.png"
+                        <img src="./assets/imagens/cardapio-notebook.png"
                             alt="Imagem do sistema de agendamento de viages (computador)"
                             class="hover:scale-110 transition-all duration-300">
                     </div>
                     <div class="hidden sm:block">
-                        <img src="./assets/imagens/construtora-celular.png"
+                        <img src="./assets/imagens/cardapio-celular.png"
                             alt="Imagem do sistema de agendamento de viages (computador)"
                             class="hover:scale-110 transition-all duration-300">
                     </div>
                 </div>
 
                 <div class="w-full text-center">
-                    <h5 class="text-neutral-700 dark:text-neutral-300 text-xl tracking-wider font-bold mb-8">Construtora
-                        Rodrigues
+                    <h5 class="text-neutral-700 dark:text-neutral-300 text-xl tracking-wider font-bold mb-8">Cardapio Zé
+                        Burger
                     </h5>
                     <p class="text-neutral-700 dark:text-neutral-300 text-base mb-8 font-extralight">Site desenvolvido
-                        para uma construtora, a aplicação possui varias seções como projetos, sobre a empresa, serviços
-                        realizados e mais.
+                        para hamburgueria, se trata de um cardapio digital odne o usuario pode adicionar seu pedido ao
+                        carrinho e realizar seu pedido diretament pelo WhatsApp. Clique e confira !
                     </p>
                     <button
                         class="open-modal w-48 h-14 bg-button-bg cursor-pointer rounded-md border-2 dark:border-none dark:shadow-[inset_0px_-2px_0px_1px_#441bbf,inset_0px_0.5px_0px_1px_#441bbf] hover:border-[#441bbf] hover:bg-transparent shadow-[inset_0px_-2px_0px_1px_#441bbf] hover:text-neutral-700 group transition duration-300 ease-in-out"
@@ -574,86 +560,72 @@
             </h3>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 pt-16 lg:pb-10 gap-8">
                 <div class="relative w-full">
-                    <img src="./assets/midias/clonespotify.png" alt="Imagem do projeto clone Spotify"
-                        class="w-full filter brightness-50">
+                    <img src="./assets/imagens/Página inicial sistema amais.png" alt="Imagem do projeto clone Spotify"
+                        class="w-full filter brightness-50 opacity-70">
                     <div class="absolute inset-0 flex flex-col items-center justify-center">
-                        <h3 class="mb-4 text-xl font-bold text-neutral-200 tracking-wider">Nome do projeto</h3>
+                        <h3 class="mb-4 text-xl font-bold text-neutral-200 tracking-wider">Sistema A+</h3>
                         <button
                             class="open-modal w-40 h-10 bg-button-bg cursor-pointer rounded-md border-none hover:border-[#491bbf] hover:bg-neutral-100 group transition duration-300 ease-in-out"
-                            data-project="1">
+                            data-project="5">
                             <span
-                                class="font-medium uppercase text-base text-neutral-100 group-hover:text-text-custom">See
-                                more</span>
+                                class="font-medium uppercase text-base text-neutral-100 group-hover:text-text-custom">Ver
+                                Mais</span>
                         </button>
                     </div>
                 </div>
                 <div class="relative w-full">
-                    <img src="./assets/midias/clonespotify.png" alt="Imagem do projeto clone Spotify"
-                        class="w-full filter brightness-50">
+                    <img src="./assets/imagens/dev-movies-notebook.png" alt="Imagem do projeto clone Spotify"
+                        class="w-full filter brightness-50 opacity-70">
                     <div class="absolute inset-0 flex flex-col items-center justify-center">
-                        <h3 class="mb-4 text-xl font-bold text-neutral-200 tracking-wider">Nome do projeto</h3>
+                        <h3 class="mb-4 text-xl font-bold text-neutral-200 tracking-wider">Dev Movies</h3>
                         <button
                             class="open-modal w-40 h-10 bg-button-bg cursor-pointer rounded-md border-none hover:border-[#491bbf] hover:bg-neutral-100 group transition duration-300 ease-in-out"
-                            data-project="1">
+                            data-project="6">
                             <span
-                                class="font-medium uppercase text-base text-neutral-100 group-hover:text-text-custom">See
-                                more</span>
+                                class="font-medium uppercase text-base text-neutral-100 group-hover:text-text-custom">Ver
+                                Mais</span>
                         </button>
                     </div>
                 </div>
                 <div class="relative w-full">
-                    <img src="./assets/midias/clonespotify.png" alt="Imagem do projeto clone Spotify"
+                    <img src="./assets/imagens/sneakers-nike-notebook.png" alt="Imagem do projeto clone Spotify"
                         class="w-full filter brightness-50">
                     <div class="absolute inset-0 flex flex-col items-center justify-center">
-                        <h3 class="mb-4 text-xl font-bold text-neutral-200 tracking-wider">Nome do projeto</h3>
+                        <h3 class="mb-4 text-xl font-bold text-neutral-200 tracking-wider">Sneakers</h3>
                         <button
                             class="open-modal w-40 h-10 bg-button-bg cursor-pointer rounded-md border-none hover:border-[#491bbf] hover:bg-neutral-100 group transition duration-300 ease-in-out"
-                            data-project="1">
+                            data-project="7">
                             <span
-                                class="font-medium uppercase text-base text-neutral-100 group-hover:text-text-custom">See
-                                more</span>
+                                class="font-medium uppercase text-base text-neutral-100 group-hover:text-text-custom">Ver
+                                Mais</span>
                         </button>
                     </div>
                 </div>
                 <div class="relative w-full">
-                    <img src="./assets/midias/clonespotify.png" alt="Imagem do projeto clone Spotify"
+                    <img src="./assets/imagens/pulsefit.png" alt="Imagem do projeto clone Spotify"
                         class="w-full filter brightness-50">
                     <div class="absolute inset-0 flex flex-col items-center justify-center">
-                        <h3 class="mb-4 text-xl font-bold text-neutral-200 tracking-wider">Nome do projeto</h3>
+                        <h3 class="mb-4 text-xl font-bold text-neutral-200 tracking-wider">Pulse Fit</h3>
                         <button
                             class="open-modal w-40 h-10 bg-button-bg cursor-pointer rounded-md border-none hover:border-[#491bbf] hover:bg-neutral-100 group transition duration-300 ease-in-out"
-                            data-project="1">
+                            data-project="8">
                             <span
-                                class="font-medium uppercase text-base text-neutral-100 group-hover:text-text-custom">See
-                                more</span>
+                                class="font-medium uppercase text-base text-neutral-100 group-hover:text-text-custom">Ver
+                                Mais</span>
                         </button>
                     </div>
                 </div>
                 <div class="relative w-full">
-                    <img src="./assets/midias/clonespotify.png" alt="Imagem do projeto clone Spotify"
+                    <img src="./assets/imagens/clonespotify.png" alt="Imagem do projeto clone Spotify"
                         class="w-full filter brightness-50">
                     <div class="absolute inset-0 flex flex-col items-center justify-center">
-                        <h3 class="mb-4 text-xl font-bold text-neutral-200 tracking-wider">Nome do projeto</h3>
+                        <h3 class="mb-4 text-xl font-bold text-neutral-200 tracking-wider">Clone Spotify</h3>
                         <button
                             class="open-modal w-40 h-10 bg-button-bg cursor-pointer rounded-md border-none hover:border-[#491bbf] hover:bg-neutral-100 group transition duration-300 ease-in-out"
-                            data-project="1">
+                            data-project="9">
                             <span
-                                class="font-medium uppercase text-base text-neutral-100 group-hover:text-text-custom">See
-                                more</span>
-                        </button>
-                    </div>
-                </div>
-                <div class="relative w-full">
-                    <img src="./assets/midias/clonespotify.png" alt="Imagem do projeto clone Spotify"
-                        class="w-full filter brightness-50">
-                    <div class="absolute inset-0 flex flex-col items-center justify-center">
-                        <h3 class="mb-4 text-xl font-bold text-neutral-200 tracking-wider">Nome do projeto</h3>
-                        <button
-                            class="open-modal w-40 h-10 bg-button-bg cursor-pointer rounded-md border-none hover:border-[#491bbf] hover:bg-neutral-100 group transition duration-300 ease-in-out"
-                            data-project="1">
-                            <span
-                                class="font-medium uppercase text-base text-neutral-100 group-hover:text-text-custom">See
-                                more</span>
+                                class="font-medium uppercase text-base text-neutral-100 group-hover:text-text-custom">Ver
+                                Mais</span>
                         </button>
                     </div>
                 </div>
@@ -772,20 +744,6 @@
                                     <i class="bi bi-envelope-at-fill text-2xl z-10"></i>
                                 </a>
                                 <div class="tooltip">Email</div>
-                            </li>
-
-                            <li class="icon-content">
-                                <a href="https://www.instagram.com/devweb_code/" aria-label="Instagram"
-                                    data-social="instagram" target="_blank">
-                                    <div class="filled"></div>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                        class="bi bi-instagram" viewBox="0 0 16 16" xml:space="preserve">
-                                        <path
-                                            d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"
-                                            fill="currentColor"></path>
-                                    </svg>
-                                </a>
-                                <div class="tooltip">Instagram</div>
                             </li>
                         </ul>
                     </div>
