chore: altera icones da seção habilidades

--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
                 <h3 class="mb-8 text-text-custom text-xl font-bold tracking-wider">Conheça-me!</h3>
                 <p class="text-neutral-700 dark:text-neutral-400 text-base leading-relaxed">Sou um <strong
                         class="text-neutral-600 dark:text-neutral-300">Desenvolvedor Web Focado em Front-End</strong>,
-                    construindo e desenvolvendo Websites, Aplicações Web e Aplicativos Moveis que conduzem ao sucesso do produto
+                    construindo e desenvolvendo Websites, Aplicações Web e Aplicativos Moveis que conduzem ao sucesso do
+                    produto
                     global. Veja alguns dos meus trabalhos na seção de Projectos.</p> <br>
                 <p class="mb-8 text-neutral-700  dark:text-neutral-400 text-base leading-relaxed">Estou aberto a
                     oportunidades de <strong class="text-neutral-600 dark:text-neutral-300">trabalho</strong>
@@ -225,7 +226,7 @@
             <div class="flex flex-wrap justify-center gap-5 max-w-7xl mx-auto mt-16 ">
                 <div
                     class="bg-gray-200 dark:bg-gray-900 dark:shadow-none w-28 h-32 flex flex-col justify-center items-center gap-2 border-b-4 border-border-custom rounded-tl-3xl duration-300 hover:-translate-y-6 shadow-2xl shadow-neutral-400 text-text-custom">
-                    <p>HTML 5</p>
+                    <p>HTML 5</p>   
                     <i class="devicon-html5-plain text-4xl"></i>
                 </div>
                 <div
@@ -240,29 +241,13 @@
                 </div>
                 <div
                     class="bg-gray-200 dark:bg-gray-900 dark:shadow-none w-28 h-32 flex flex-col justify-center items-center gap-2 border-b-4 border-border-custom rounded-tl-3xl duration-300 hover:-translate-y-6 shadow-2xl shadow-neutral-400 text-text-custom">
-                    <p>Bootstrap</p>
-                    <i class="devicon-bootstrap-plain text-4xl"></i>
-
-                </div>
-                <div
-                    class="bg-gray-200 dark:bg-gray-900 dark:shadow-none w-28 h-32 flex flex-col justify-center items-center gap-2 border-b-4 border-border-custom rounded-tl-3xl duration-300 hover:-translate-y-6 shadow-2xl shadow-neutral-400 text-text-custom">
-                    <p>Tailwind</p>
-                    <i class="devicon-tailwindcss-original text-4xl"></i>
-                </div>
-                <div
-                    class="bg-gray-200 dark:bg-gray-900 dark:shadow-none w-28 h-32 flex flex-col justify-center items-center gap-2 border-b-4 border-border-custom rounded-tl-3xl duration-300 hover:-translate-y-6 shadow-2xl shadow-neutral-400 text-text-custom">
-                    <p>Sass</p>
-                    <i class="devicon-sass-original text-4xl"></i>
-                </div>
-                <div
-                    class="bg-gray-200 dark:bg-gray-900 dark:shadow-none w-28 h-32 flex flex-col justify-center items-center gap-2 border-b-4 border-border-custom rounded-tl-3xl duration-300 hover:-translate-y-6 shadow-2xl shadow-neutral-400 text-text-custom">
                     <p>React</p>
                     <i class="devicon-react-original text-4xl"></i>
                 </div>
                 <div
                     class="bg-gray-200 dark:bg-gray-900 dark:shadow-none w-28 h-32 flex flex-col justify-center items-center gap-2 border-b-4 border-border-custom rounded-tl-3xl duration-300 hover:-translate-y-6 shadow-2xl shadow-neutral-400 text-text-custom">
-                    <p>Vite</p>
-                    <i class="devicon-vitejs-plain text-4xl"></i>
+                    <p>React Native</p>
+                    <i class="devicon-react-original text-4xl"></i>
                 </div>
                 <div
                     class="bg-gray-200 dark:bg-gray-900 dark:shadow-none w-28 h-32 flex flex-col justify-center items-center gap-2 border-b-4 border-border-custom rounded-tl-3xl duration-300 hover:-translate-y-6 shadow-2xl shadow-neutral-400 text-text-custom">
@@ -281,13 +266,29 @@
                 </div>
                 <div
                     class="bg-gray-200 dark:bg-gray-900 dark:shadow-none w-28 h-32 flex flex-col justify-center items-center gap-2 border-b-4 border-border-custom rounded-tl-3xl duration-300 hover:-translate-y-6 shadow-2xl shadow-neutral-400 text-text-custom">
-                    <p>PHP</p>
-                    <i class="devicon-php-plain text-4xl"></i>
+                    <p>Firebase</p>
+                    <i class="devicon-firebase-plain text-4xl"></i>
                 </div>
                 <div
                     class="bg-gray-200 dark:bg-gray-900 dark:shadow-none w-28 h-32 flex flex-col justify-center items-center gap-2 border-b-4 border-border-custom rounded-tl-3xl duration-300 hover:-translate-y-6 shadow-2xl shadow-neutral-400 text-text-custom">
-                    <p>Python</p>
-                    <i class="devicon-python-plain text-4xl"></i>
+                    <p>Tailwind</p>
+                    <i class="devicon-tailwindcss-original text-4xl"></i>
+                </div>
+                <div
+                    class="bg-gray-200 dark:bg-gray-900 dark:shadow-none w-28 h-32 flex flex-col justify-center items-center gap-2 border-b-4 border-border-custom rounded-tl-3xl duration-300 hover:-translate-y-6 shadow-2xl shadow-neutral-400 text-text-custom">
+                    <p>Bootstrap</p>
+                    <i class="devicon-bootstrap-plain text-4xl"></i>
+
+                </div>
+                <div
+                    class="bg-gray-200 dark:bg-gray-900 dark:shadow-none w-28 h-32 flex flex-col justify-center items-center gap-2 border-b-4 border-border-custom rounded-tl-3xl duration-300 hover:-translate-y-6 shadow-2xl shadow-neutral-400 text-text-custom">
+                    <p>Sass</p>
+                    <i class="devicon-sass-original text-4xl"></i>
+                </div>
+                <div
+                    class="bg-gray-200 dark:bg-gray-900 dark:shadow-none w-28 h-32 flex flex-col justify-center items-center gap-2 border-b-4 border-border-custom rounded-tl-3xl duration-300 hover:-translate-y-6 shadow-2xl shadow-neutral-400 text-text-custom">
+                    <p>Vite</p>
+                    <i class="devicon-vitejs-plain text-4xl"></i>
                 </div>
                 <div
                     class="bg-gray-200 dark:bg-gray-900 dark:shadow-none w-28 h-32 flex flex-col justify-center items-center gap-2 border-b-4 border-border-custom rounded-tl-3xl duration-300 hover:-translate-y-6 shadow-2xl shadow-neutral-400 text-text-custom">
