chore: modifica estrutura da sessão projetos e texto da sessão sobre

--- a/index.html
+++ b/index.html
@@ -188,15 +188,15 @@
             <div class="max-w-full">
                 <h3 class="mb-8 text-text-custom text-xl font-bold tracking-wider">Conheça-me!</h3>
                 <p class="text-neutral-700 dark:text-neutral-400 text-base leading-relaxed">Sou um <strong
-                        class="text-neutral-600 dark:text-neutral-300">Desenvolvedor Web Focado em Front-End</strong>,
-                    construindo e desenvolvendo Websites, Aplicações Web e Aplicativos Moveis que conduzem ao sucesso do
-                    produto
-                    global. Veja alguns dos meus trabalhos na seção de Projectos.</p> <br>
+                        class="text-neutral-600 dark:text-neutral-300">DesenvolvedorFront-End</strong>,
+                    apaixonado por transformar ideias em soluções digitais. Crio sites, sistemas e aplicativos móveis
+                    com foco em performance, usabilidade e tecnologia moderna. <br>
+                    Dê uma olhada na seção de projetos para conhecer meu trabalho.</p> <br>
                 <p class="mb-8 text-neutral-700  dark:text-neutral-400 text-base leading-relaxed">Estou aberto a
                     oportunidades de <strong class="text-neutral-600 dark:text-neutral-300">trabalho</strong>
                     onde eu possa contribuir, aprender e crescer. Se tiverem uma boa oportunidade que corresponda às
-                    minhas competências e experiência, não hesitem em <strong
-                        class="text-neutral-600 dark:text-neutral-300">contactar-me</strong>.</p>
+                    minhas competências e experiência, <strong
+                        class="text-neutral-600 dark:text-neutral-300">entre em contato.</strong></p>
                 <a href="#contact">
                     <button
                         class="w-52 h-14 bg-button-bg cursor-pointer rounded-md border-2 border-none dark:border-none dark:shadow-[inset_0px_-2px_0px_1px_#441bbf,inset_0px_0.5px_0px_1px_#441bbf] hover:border-[#441bbf] hover:bg-transparent shadow-[inset_1.5px_-3.5px_0px_1px_#441bbf,inset_-1.5px_0.5px_0px_1px_#441bbf] hover:text-neutral-700 group transition duration-300 ease-in-out">
@@ -226,7 +226,7 @@
             <div class="flex flex-wrap justify-center gap-5 max-w-7xl mx-auto mt-16 ">
                 <div
                     class="bg-gray-200 dark:bg-gray-900 dark:shadow-none w-28 h-32 flex flex-col justify-center items-center gap-2 border-b-4 border-border-custom rounded-tl-3xl duration-300 hover:-translate-y-6 shadow-2xl shadow-neutral-400 text-text-custom">
-                    <p>HTML 5</p>   
+                    <p>HTML 5</p>
                     <i class="devicon-html5-plain text-4xl"></i>
                 </div>
                 <div
@@ -562,7 +562,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 pt-16 lg:pb-10 gap-8">
                 <div class="relative w-full">
                     <img src="./assets/imagens/Página inicial sistema amais.png" alt="Imagem do projeto clone Spotify"
-                        class="w-full filter brightness-50 opacity-70">
+                        class="w-full filter brightness-50">
                     <div class="absolute inset-0 flex flex-col items-center justify-center">
                         <h3 class="mb-4 text-xl font-bold text-neutral-200 tracking-wider">Sistema A+</h3>
                         <button
@@ -576,7 +576,7 @@
                 </div>
                 <div class="relative w-full">
                     <img src="./assets/imagens/dev-movies-notebook.png" alt="Imagem do projeto clone Spotify"
-                        class="w-full filter brightness-50 opacity-70">
+                        class="w-full filter brightness-50">
                     <div class="absolute inset-0 flex flex-col items-center justify-center">
                         <h3 class="mb-4 text-xl font-bold text-neutral-200 tracking-wider">Dev Movies</h3>
                         <button
@@ -589,10 +589,10 @@
                     </div>
                 </div>
                 <div class="relative w-full">
-                    <img src="./assets/imagens/sneakers-nike-notebook.png" alt="Imagem do projeto clone Spotify"
-                        class="w-full filter brightness-50">
+                    <img src="./assets/imagens/pulsefit.png" alt="Imagem do projeto clone Spotify"
+                        class="w-full brightness-0">
                     <div class="absolute inset-0 flex flex-col items-center justify-center">
-                        <h3 class="mb-4 text-xl font-bold text-neutral-200 tracking-wider">Sneakers</h3>
+                        <h3 class="mb-4 text-xl font-bold text-neutral-200 tracking-wider">Aguardando...</h3>
                         <button
                             class="open-modal w-40 h-10 bg-button-bg cursor-pointer rounded-md border-none hover:border-[#491bbf] hover:bg-neutral-100 group transition duration-300 ease-in-out"
                             data-project="7">
@@ -604,9 +604,9 @@
                 </div>
                 <div class="relative w-full">
                     <img src="./assets/imagens/pulsefit.png" alt="Imagem do projeto clone Spotify"
-                        class="w-full filter brightness-50">
+                        class="w-full brightness-0 ">
                     <div class="absolute inset-0 flex flex-col items-center justify-center">
-                        <h3 class="mb-4 text-xl font-bold text-neutral-200 tracking-wider">Pulse Fit</h3>
+                        <h3 class="mb-4 text-xl font-bold text-neutral-200 tracking-wider">Aguardando...</h3>
                         <button
                             class="open-modal w-40 h-10 bg-button-bg cursor-pointer rounded-md border-none hover:border-[#491bbf] hover:bg-neutral-100 group transition duration-300 ease-in-out"
                             data-project="8">
@@ -617,10 +617,10 @@
                     </div>
                 </div>
                 <div class="relative w-full">
-                    <img src="./assets/imagens/clonespotify.png" alt="Imagem do projeto clone Spotify"
-                        class="w-full filter brightness-50">
+                    <img src="./assets/imagens/pulsefit.png" alt="Imagem do projeto clone Spotify"
+                        class="w-full brightness-0">
                     <div class="absolute inset-0 flex flex-col items-center justify-center">
-                        <h3 class="mb-4 text-xl font-bold text-neutral-200 tracking-wider">Clone Spotify</h3>
+                        <h3 class="mb-4 text-xl font-bold text-neutral-200 tracking-wider">Aguardando...</h3>
                         <button
                             class="open-modal w-40 h-10 bg-button-bg cursor-pointer rounded-md border-none hover:border-[#491bbf] hover:bg-neutral-100 group transition duration-300 ease-in-out"
                             data-project="9">
