chore: refiz a página de agradecimento

--- a/obrigado.html
+++ b/obrigado.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR" class="scroll-smooth">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/css/output.css">
+    <title>Agradecimento</title>
 </head>
-<body>
-    TESTE
+
+<body class="bg-neutral-100 dark:bg-gray-950 min-h-screen flex justify-center items-center">
+
+    <section class="m-5">
+        <div class="max-w-xl w-full bg-white shadow-xl p-10 rounded-lg text-center">
+            <h2 class="text-2xl md:text-4xl font-bold text-[#441bbf] mb-6">Mensagem enviada com sucesso!</h1>
+                <p class="text-lg text-neutral-700 dark:text-neutral-300 mb-8">
+                    Obrigado por entrar em contato. Em breve, retornaremos sua mensagem.
+                </p>
+                <a href="index.html"
+                    class="inline-block px-6 py-3 bg-button-bg text-white rounded-md font-semibold hover:bg-transparent hover:text-[#441bbf] border-2 border-[#441bbf] transition duration-300">
+                    Voltar para o início
+                </a>
+        </div>
+    </section>
+
 </body>
+
 </html>
