--- a/obrigado.html
+++ b/obrigado.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/css/output.css">
+    <link rel="icon" href="./assets/imagens/logo2.png">
     <title>Agradecimento</title>
 </head>
 
